fix: preserve null open values in Gson mapping